# movitzs-krypto-server

./: .env  Cargo.toml  Rocket.toml  docker-compose.yaml  docs.md  go.mod  main.go  server.go
migrations/2022-12-05-134543_init/: down.sql  up.sql
src/: main.rs
