[package]
name = "hw10-encstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.149"
dotenvy = "0.15.6"
tokio-postgres = "0.7.7"
once_cell = "1.16.0"
regex = "1.7.0"
rust-crypto = "0.2.36"
base64 = "0.13.1"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
